[package]
name = "unwrap_to"
version = "0.1.0"
authors = ["Aaron Power <theaaronepower@gmail.com>"]
description = "A utility macro to unwrap enums."
repository = "https://github.com/Aaronepower/unwrap_to.git"
license = "MIT/Apache-2.0"
keywords = ["enum", "adt", "unwrap"]
categories = ["development-tools", "no-std"]

[badges]
travis-ci = { repository = "Aaronepower/unwrap_to" }

[dependencies]
